--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* basix resets */
+
 /* Remove list styles (bullets/numbers) */
 ol, ul, menu {
     list-style: none;
@@ -8,6 +10,42 @@ ol, ul, menu {
 *::after {
     box-sizing: border-box;
 }
+
+/* some basic layout classes with css grid */
+.wrapper{
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+}
+.cols-1-8{
+grid-column-start: 1;
+grid-column-end: 8;
+}
+.cols-2-8{
+grid-column-start: 2;
+grid-column-end: 8;
+}
+.cols-10-12{
+ grid-column: col 10/ span 2;
+}
+
+.cols-full-width{
+  grid-column: span 12;
+}
+
+.cols-1-10{
+  grid-column:  span 10;
+ }
+
+ @media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .sm-full-width{
+    grid-column: span 12;
+  }
+}
+/*****************************
+  end of layout classes 
+  ****************************/
+
 .logo{
     margin: 20px;
 }
@@ -15,80 +53,67 @@ ol, ul, menu {
     margin: 0;
     padding: 0;
     }
-li{
-    border-top: 0.5px solid #444;
-    padding : 1em 0;
+
+
+.comments{
+  grid-row-start:2;
+  border-top: 0.5px solid #444;
+  border-bottom: 0.5px solid #444;
 }
-.grid {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-column-gap: 1em;
-    grid-row-gap: 1em;
-  }
-  .comments{
-    grid-template-columns: repeat(12, 1fr);
-    grid-column-start: 2;
-    grid-column-end: 8;
-    grid-row-start:2;
-    border-top: 0.5px solid #444;
-    border-bottom: 0.5px solid #444;
-  }
-  .comments__head{
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    padding: 20px 0px;
-  }
-  .comments__count{
-    grid-column-start: 1;
-    grid-column-end: 6;
-    font-size: 1.3em;
-    font-weight: bold;
-  }
-  .comments__filter{
-    justify-self: end;
-    grid-column: col 10/ span 2;
-  }
-  .comments__comment{
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
+
+.comments li{
+  border-top: 0.5px solid #444;
+  padding : 1em 0;
 }
-  .comments__likes{
-    grid-column: col 10/ span 2;
+
+.comments__head{
+  padding: 20px 0px;
+}
+.comments__count{
+  font-size: 1.3em;
+  font-weight: bold;
+}
+.comments__filter{
+  justify-self: end;
+}
+.comments__comment{  
+}
+.comments__likes{
+  
 }
 .comments__username{
-    grid-column: span 12;
+  
     grid-row: 1;
     font-size: 1.1em;
     font-weight: bold;
 }
-  .comments__text{
-    grid-column: span 10;
-    justify-self: start;
-    grid-row: 2 ;
+.comments__text{
+ 
+  justify-self: start;
+  grid-row: 2 ;
+}
+.error{
+  color: red;
+  font-size: 1.5em;
+}
+button {
+  padding: 5px 20px;
+  margin-left: 5px;
+  border-radius: 15px;
+  background-color: white;
+}
+button:hover{
+  background-color: #ddd;
+}
+button.active{
+  background-color: #ccc;
+}
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+ 
+  .comments{
+     
+      padding: 10px;
   }
-  .error{
-    color: red;
-    font-size: 1.5em;
-  }
-  button {
-    padding: 5px 20px;
-    margin-left: 5px;
-    border-radius: 15px;
-    background-color: white;
-  }
-  button:hover{
-    background-color: #ddd;
-  }
-  button.active{
-        background-color: #ccc;
-  }
-  @media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    .comments{
-        grid-column: span 12;
-        padding: 10px;
-    }
-    .comments__likes{
-        grid-column: span 12;
-    }
-  }
+  
+}
